New iteration of dashboards

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -21,6 +21,48 @@
   </section><!-- End Hero -->
 
   <main id="main">
+
+    <!-- ======= Player Service Section ======= -->
+    <section id="players" class="players">
+      <div class="container" data-aos="fade-up">
+        <div class="section-title">
+          <h1><span style="color:grey"> PIŁKARZ </span> </span></h1> <h2> STAŃ SIĘ WIDOCZNY W ŚWIECIE PIŁKI NOŻNEJ</h2>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="player-box">
+              <i class="icofont-users-social"></i>
+              <p>Zaprezentuj się trenerom, skautom oraz klubom. Złóż swoje piłkarskie CV, a my dołączymy do niego zweryfikowane statystyki</p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
+            <div class="player-box">
+              <i class="icofont-field"></i>
+              <p>Szukaj klubu. Szukaj testów. Szukaj szkółki. Brak ofert o Twoich wymaganiach? Pomożemy Ci w transferze w Polsce i za granicą. </p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+            <div class="player-box">
+              <i class="icofont-live-support"></i>
+              
+              <p>Obserwuj piłkarzy, trenerów oraz kluby. Otrzymuj powiadomienia o ich wynikach. Zapraszaj znajomych i rywalizuj z nimi w Fantasy dla niższych lig.</p>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+            <div class="player-box">
+              <i class="icofont-users-alt-5"></i>
+              <p>Korzystaj z produktów dodatkowych. Dietetyk, Trener motoryczny, Trener bramkarzy, Trener techniki, Trener mentalny. Raport skautingowy z Twojej gry.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </section><!-- End Player Service Section -->
+
     <!-- ======= Clients Section ======= -->
     <section id="clients" class="clients">
       <div class="container" data-aos="zoom-in">
