--- a/backend/static/assets/css/style.css
+++ b/backend/static/assets/css/style.css
@@ -24,7 +24,9 @@ a:hover {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Raleway", sans-serif;
+  /*font-family: "Raleway", sans-serif;*/
+  /*font-family: 'PT Sans', sans-serif;*/
+  font-family: 'Dosis', sans-serif;
 }
 
 .main-color {
@@ -78,7 +80,7 @@ h1, h2, h3, h4, h5, h6 {
   transition: all 0.5s;
   z-index: 997;
   padding: 20px 0;
-  border-bottom:2px solid #e03a3c;
+  border-bottom:1px solid #e03a3c;
 }
 
 #header.header-scrolled {
@@ -478,11 +480,11 @@ section {
   content: '';
   position: absolute;
   display: block;
-  width: 50px;
+  width: 70px;
   height: 3px;
   background: #e03a3c;
   bottom: 0;
-  left: calc(50% - 25px);
+  left: calc(50% - 35px);
 }
 
 .section-title p {
@@ -675,6 +677,52 @@ section {
     text-align: center;
   }
 }
+
+
+/*--------------------------------------------------------------
+# Players
+--------------------------------------------------------------*/
+.players {
+  padding-top: 80px;
+}
+
+.players .player-box {
+  padding: 30px 30px 25px 30px;
+  width: 100%;
+  position: relative;
+  text-align: center;
+  /*box-shadow: 0px 2px 35px rgba(0, 0, 0, 0.06);*/
+  border-radius: 4px;
+}
+
+.players .player-box i {
+  position: absolute;
+  top: -27px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 36px;
+  background: #fff;
+  padding: 12px;
+  color: #e03a3c;
+  border-radius: 50px;
+  /*border: 2px solid #fff;*/
+  /*box-shadow: 0px 2px 25px rgba(0, 0, 0, 0.1);  @todo to be removed*/ 
+}
+
+.players .player-box span {
+  font-size: 36px;
+  display: block;
+  font-weight: 700;
+  color: #111111;
+}
+
+.players .player-box p {
+  padding: 0;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  font-size: 14px;
+}
+
 
 /*--------------------------------------------------------------
 # Counts
