--- a/profiles/templates/profiles/cards/_player_season_card.html
+++ b/profiles/templates/profiles/cards/_player_season_card.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <div class="card">
-    <img class="card-img-top" src="img_avatar1.png" alt="Card image">
+    <!--img class="card-img-top" src="img_avatar1.png" alt="Card image"-->
     <div class="card-body">
     
         
