--- a/backend/static/assets/css/style.css
+++ b/backend/static/assets/css/style.css
@@ -360,7 +360,7 @@ main > :first-child{
   position: fixed;
   right: 15px;
   top: 15px;
-  z-index: 9998;
+  z-index: 1050; /*9998;*/
   border: 0;
   background: none;
   font-size: 24px;
