--- a/profiles/templates/profiles/edit_profile.html
+++ b/profiles/templates/profiles/edit_profile.html
@@ -8,75 +8,44 @@
 {% block title %}{{ block.super }} {% trans 'Edycja profilu' %} {% endblock %}
 
 <!-- Benefits of the Django application -->
+
+{% block content_header %}
+  {{ block.super }}
+ <div class="row">
+              <div class="col-md-12"> 
+                <div class="mb-3" style="height:150px;">
+                  
+                  <div class="text-center" style="height:75px; background-color:#1b1b1b;">
+                      
+                      <img style="background: #fff; border:3px solid #e03a3c;" title="profile picture" class="mt-3 rounded-circle img-circle img-responsive" src="{% thumbnail user.picture|default:'default_profile.png' 'profile_avatar_show' %}">
+                  </div>
+                  <div class="text-center" style="position:relative; top:-35px;  z-index:-1;height:55px; background-color:#1b1b1b;transform: skewY(-1.8deg);"></div>
+              </div>
+        </div> <!-- row -->
+{% endblock content_header %}
+
+
 {% block content %}
 <section id="profile" class="profile">
   <div class="container" data-aos="fade-up">
-    <div class="container profile-head">
-      <h1>{% trans 'Edycja profilu' %}</h1>
-    </div>
-   
-      <form class='profile-edit-form' enctype="multipart/form-data" method="post">
         <div class="row">
-            <div class="col-md-6">
-              <h2 class='form-section-title'>Ustawienia konta</h2>
-
-
-
-              {% crispy user_form %}
-
-
-
-
-
-
-
-
-
-              <a class="btn btn-default pull-right" href="{% url 'account_reset_password' %}">Zmień hasło</a>
-            </div>
-            <div class="col-md-3">
-            <div class="text-center">
-              <img title="profile picture" class="img-circle img-responsive" src="{% thumbnail user.picture|default:'default_profile.png' 'profile_avatar_show' %}">
-            </div>
-          </div>
           <div class="col-md-12">
-            <hr>
-            <h1>Twoje CV</h1>
-            {% crispy profile_form %}
-          </div> 
-        </div>
-        <button type="submit" name="update" value="Update" id="submit-id-update">Aktualizuj</button>
-      </form>
+       
 
 
-      <div> 
-        {% if user.is_pending_role_change %}
-        <div class="alert alert-danger">
-          Oczekujesz na akceptacje zmiany konta z <strong>{{user.pending_role_change.current_pretty}}</strong> na <strong>{{user.pending_role_change.new_pretty}}</strong> 
-          <form enctype="multipart/form-data" method="post" action="{% url 'profiles:rolechange_self' %}">{% csrf_token %}
-            <input type="submit" name="cancel" value="Cofnij prośbę" class="btn btn-primary" id="submit-id-cancel">
-            <input type="hidden" name="cancel" value="True"> 
-          </form>
+               <form class='profile-edit-form' enctype="multipart/form-data" method="post">
+                  {% crispy profile_form %}
+                <button type="submit" name="update" value="Update" id="submit-id-update">{% trans 'Aktualizuj CV' %}</button>
+               </form>
+
+         </div> 
         </div>
-        {% else %}
-        <form enctype="multipart/form-data" method="post" action="{% url 'profiles:rolechange_self' %}">
-          {% crispy role_form %}
-        </form>
-        {% endif %}
-        
-          
-        
+      <div>         
       </div>
     </div>
   </div>
 </div>
-<!--div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <a class="btn btn-default pull-right" href="{% url 'account_reset_password' %}">Change Password</a>
-    </div>
-  </div>
-</div-->
+
 </section>
 {% endblock content %}
 
