--- a/profiles/templates/profiles/modals/load_modals.html
+++ b/profiles/templates/profiles/modals/load_modals.html
@@ -2,20 +2,20 @@
 
 {# basic modals if not auth ask to register #}
 
-{% if load_all %}
-    {% include 'profiles/modals/_new_account_role_modal.html' with trigger=False %}
-    {% include 'profiles/modals/_verification_modal.html' with trigger=False %}
-    {% include 'profiles/modals/_inquiry_modal.html' with trigger=False %}
-    {% include 'profiles/modals/_register_modal.html' with trigger=False %}
-{% else %}
+
     {% if user.is_authenticated %}
 
         {# If user has no role, which might occure when somehow it is not assign durign registration #}
         {% if user.is_roleless %}
-            {% include 'profiles/modals/_new_account_role_modal.html' %}
+            {% include 'profiles/modals/_new_account_role_modal.html' with trigger=True %}
         {% elif user.is_missing_verification_data %}
 
-            {% include 'profiles/modals/_verification_modal.html' %}
+            {% include 'profiles/modals/_verification_modal.html' with trigger=True %}
+            <script>
+            $(window).on('load',function(){
+                get_verification_form();
+            });
+            </script>
         {% else %}
 
             {% include 'profiles/modals/_inquiry_modal.html' %}
@@ -25,5 +25,3 @@
         {% include 'profiles/modals/_register_modal.html' %}
 
     {% endif %}
-{% endif %}
-
