--- a/profiles/templates/profiles/tables/_game_table.html
+++ b/profiles/templates/profiles/tables/_game_table.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 
-  <table class="table w-auto">
+  <table class="table w-auto m-auto">
 
     {% if caption %}
     <caption><a href="{% url 'profiles:player_games' %}" >{% trans 'Zobacz więcej' %}</a></caption>
