--- a/users/templates/account/base.html
+++ b/users/templates/account/base.html
@@ -1,1 +1,10 @@
 {% extends "inner_standalone_page_base.html" %}
+
+
+{% load static %}
+
+
+{% block extra_css %}
+    {{ block.super }}
+    <link href="{% static 'assets/css/signup.css' %}" rel="stylesheet">
+{% endblock extra_css%}
