adding flex usage

--- a/backend/static/assets/css/profiles.css
+++ b/backend/static/assets/css/profiles.css
@@ -2,6 +2,7 @@
 
 .banner {
     padding:5px 40px;
+    margin-bottom: 0px;
 }
 
 #profile {
@@ -119,7 +120,10 @@ section.profile {
         padding-left: 0px;
         padding-right: 0px;
     }
-
+    .profile .profile-container .container { 
+      padding-left: 0px;
+      padding-right: 0px;
+  }
     #profile { 
         padding-top: 0px;
     }
