--- a/profiles/templates/profiles/modals/_verification_modal.html
+++ b/profiles/templates/profiles/modals/_verification_modal.html
@@ -8,14 +8,18 @@
   <div class="modal-dialog modal-dialog-centered modal-fullscreen-sm-down">
     <div class="modal-content">
       <div class="modal-header">
-        <h3 class="modal-title" id="verificationModalLabel">Werifikacja konta</h3>
+        <h3 class="modal-title" id="verificationModalLabel">{% trans 'Wymagana werifikacja konta' %}</h3>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+
+
       <div class="modal-body">
+      <div>
         By w pełni korzystać z platformy <strong>{% include 'profiles/partials/brandname.html' %}</strong> należy zwerifikować konto uzupełniając poniższe dane.
-        
+
+      </div>
     
 
 
@@ -53,6 +57,7 @@
     });
   }, false);
 })();
+
 </script>
 
 
