--- a/profiles/templates/profiles/edit_profile.html
+++ b/profiles/templates/profiles/edit_profile.html
@@ -11,28 +11,17 @@
 
 {% block content_header %}
   {{ block.super }}
- <div class="row">
-              <div class="col-md-12"> 
-                <div class="mb-3" style="height:150px;">
-                  
-                  <div class="text-center" style="height:75px; background-color:#1b1b1b;">
-                      
-                      <img style="background: #fff; border:3px solid #e03a3c;" title="profile picture" class="mt-3 rounded-circle img-circle img-responsive" src="{% thumbnail user.picture|default:'default_profile.png' 'profile_avatar_show' %}">
-                  </div>
-                  <div class="text-center" style="position:relative; top:-35px;  z-index:-1;height:55px; background-color:#1b1b1b;transform: skewY(-1.8deg);"></div>
-              </div>
-        </div> <!-- row -->
+  {% include '_header_with_picture.html' with image=user.picture %}
 {% endblock content_header %}
 
 
 {% block content %}
 <section id="profile" class="profile">
   <div class="container" data-aos="fade-up">
+        <h1> KONTO {{ user.get_declared_role_display|upper }} </h1>
         <div class="row">
           <div class="col-md-12">
-       
-
-
+      
                <form class='profile-edit-form' enctype="multipart/form-data" method="post">
                   {% crispy profile_form %}
                 <button type="submit" name="update" value="Update" id="submit-id-update">{% trans 'Aktualizuj CV' %}</button>
