--- a/soccerbase/templates/soccerbase/tables/table.html
+++ b/soccerbase/templates/soccerbase/tables/table.html
@@ -1,17 +1,17 @@
 
 {% extends 'soccerbase/base.html' %}
+{% load i18n %}
 
 {% block content %}
 <section style="padding:60px;"> 
 
-{% load i18n %}
 
 {% if type == 'P' %}
     {% include 'soccerbase/tables/players.html' with objects=page_obj %}
 {% elif type == 'T' %}
     {% include 'soccerbase/tables/coaches.html' with objects=page_obj %}
 {% elif type == 'C' %}
-    {% include 'soccerbase/tables/clubs.html' with objects=page_obj %}
+    {% include 'soccerbase/tables/teams.html' with objects=page_obj %}
 {% endif %}
     
 {% include 'soccerbase/_pagination.html'%}
