--- a/users/templates/account/login.html
+++ b/users/templates/account/login.html
@@ -3,24 +3,11 @@
 {% load i18n %}
 
 
-{% block content %}
-<main id="main">
-    <!-- ======= Login subpage ======= -->
-    <section id="login" class="login first-section last-section">
-      <div class="container">
-        <div  class="section-title">
-            <h2 class="mb-3 text-center">Logowanie</h2>
-            <p></p>
-        </div>
-        <div class="row d-flex justify-content-center">
-            <div class="col-md-4 order-md-1">
-              {% include 'account/_login.html'%}
-            </div>   
-        </div>
-      </div>
-    </section>
-  </main>
+{% block account_title %}{% trans "Logowanie" %}{% endblock %}
 
 
-
+{% block account_content %}
+  <div class="col-md-4 order-md-1">
+      {% include 'account/partials/_login.html'%}
+  </div>   
 {% endblock %}
