--- a/users/templates/account/partials/_login.html
+++ b/users/templates/account/partials/_login.html
@@ -4,7 +4,6 @@
 {% get_providers as socialaccount_providers %}
 
 
-           
 <form class="login-form" method="POST" action="{% url 'account_login' %}">
     {% csrf_token %}
     <!-- h1 class="main-color"> <i class="icofont-football-alt"></i></h1 -->
@@ -25,26 +24,17 @@
     <input class="form-control" type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
     {% endif %}
 
-    <button class="btn-block" type="submit">ZALOGUJ SIĘ</button>
+    <button class="btn-block" type="submit">{% trans 'ZALOGUJ SIĘ' %}</button>
     <hr class="mb-4">
-    <p class="small"><a class="button secondaryAction" href="{% url 'account_reset_password' %}">Zapomniałeś hasła?</a></p>
+    <p class="small"><a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans 'Zapomniałeś hasła?' %}</a></p>
     <p class="small">
-        Jeżeli nie masz jeszcze konta, możesz je 
-        <a class="button secondaryAction"href="{% if signup_url %}{{ signup_url }}{% else %}{% url 'account_signup'%}{% endif %}{% if next %}?next={{ next }}{% endif %}">założyć tutaj.</a>
+        {% trans 'Jeżeli nie masz jeszcze konta, możesz je' %} 
+        <a class="button secondaryAction"href="{% if signup_url %}{{ signup_url }}{% else %}{% url 'account_signup'%}{% endif %}{% if next %}?next={{ next }}{% endif %}">{% trans 'założyć tutaj.' %}</a>
     </p>
+
+     <p class='small' style="text-align: center; padding-top:10px;"> <i>lub</i></p>
+     {% include 'account/partials/_social.html'%}
+    
+
 </form>
 
-
-    
-{% if socialaccount_providers %}
-    <p class='small' style="text-align: center; padding-top:10px;"> <i>lub</i></p>
-    <div class="socialaccount_ballot">
-    <p class='small'>Zaloguj się za pomocą konta społecznościowego:</p>
-        <ul class="socialaccount_providers">
-            {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-        </ul>
-    </div>
-
-    {% include "socialaccount/snippets/login_extra.html" %}
-
-{% endif %}
