--- a/users/templates/account/partials/_signup.html
+++ b/users/templates/account/partials/_signup.html
@@ -7,11 +7,25 @@
           <div class="mb-3">
             {% if role %}
                 <input type="hidden" class="form-control" name="role" id="id_role" value="{{ form.role.value|default_if_none:role }}" required>
+                <h4 class="text-center" style="text-transform: uppercase;">jako   {% if role == 'P'%}Piłkarz
+                          {% elif role == 'T' %}Trener
+                          {% elif role == 'C' %}Klub / Szkółka piłkarska
+                          {% elif role == 'M' %}Agent piłkarski
+                          {% elif role == 'S' %}Skout
+                          {% elif role == 'R' %}Rodzic małego piłkarza
+                          {% elif role == 'G' %}Kibic / Rodzic
+                          {% endif %}
+                         </h4>
             {% else %} 
                 <select class="form-control d-block w-100" name="role" id="id_role" value="{{ form.role.value|default_if_none:'' }}" required>
-                  <option value="">Wybierz swoją role...</option>
+                  <option value="">{% trans 'Wybierz swoją role...' %}</option>
                   <option value="P" {% if role == 'P'%} selected {% endif %}>Piłkarz</option>
                   <option value="T" {% if role == 'T'%} selected {% endif %}>Trener</option>
+                  <option value="C" {% if role == 'C'%} selected {% endif %}>Klub / Szkółka piłkarska</option>
+                  <option value="M" {% if role == 'M'%} selected {% endif %}>Agent piłkarski</option>
+                  <option value="S" {% if role == 'S'%} selected {% endif %}>Skout</option>
+                  <option value="R" {% if role == 'R'%} selected {% endif %}>Rodzic małego piłkarza</option>
+                  <option value="G" {% if role == 'G'%} selected {% endif %}>Kibic / Rodzic</option>
                 </select>
                 {{ form.role.errors }}
             {% endif %}
@@ -36,43 +50,51 @@
             <input type="password" class="form-control" name="password1" id="id_password1"  value="{{form.password1.value|default_if_none:''}}" placeholder="hasło" required>
             {{form.password.errors}}
         </div>
-        <button class="btn-block" type="submit">ZAKŁADAM DARMOWE KONTO</button>
-        <p class="text-right"><small>lub jeżeli masz już konto <a href="{{ login_url }}">zaloguj się</a></small></p>
+        <button class="btn-block" type="submit">{% trans 'ZAKŁADAM DARMOWE KONTO' %}</button>
+        <p class="text-right"><small>{% trans 'lub jeżeli masz już konto'%} <a href="{{ login_url }}">{% trans 'zaloguj się' %}</a></small></p>
 
         <hr class="mb-4">
 
+
+          
+        
+        {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+        {% endif %}
+       
+        {{ form.errors }} {# @todo to be removed #}
+
+          <p class='small' style="text-align: center; padding-top:10px;"> <i>lub</i></p>
+          {% include 'account/partials/_social.html'%}
+
+
+        <hr class="mb-4">
         <div class="terms custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" name="rules" id="id_rules" required hidden checked>
             <label class="custom-control-label" for="id_rules">
-                <i class="icofont-law-document"></i> Rejestrując się potwierdzasz, że zapoznałeś się z <a href="@todo" target="_blank">regulaminem PlayMaker.pro</a> oraz akceptujesz jego warunki. </label>
+                <i class="icofont-law-document"></i> {% trans 'Rejestrując się potwierdzasz, że zapoznałeś się z ' %}<a href="/regulamin" target="_blank">{% trans 'regulaminem PlayMaker.pro' %}</a> {% trans 'oraz akceptujesz jego warunki.' %} </label>
         </div>
-          
-        <div class="terms custom-control custom-checkbox">
+    <div class="terms custom-control custom-checkbox">
             <input type="checkbox" class="custom-control-input" name="rodo" id="id_rodo" required hidden checked>
             <label class="custom-control-label" for="id_rodo"> 
-                <i class="icofont-info-circle"></i> Twoje dane administruje PlayMaker.pro. 
+                <i class="icofont-info-circle"></i> {% trans 'Twoje dane administruje PlayMaker.pro. ' %} 
           
                 <span class="accordion" id="rodo-terms">
                       <span id="headingOne">
                           <a class="text-left"  data-toggle="collapse" data-target="#rodoCollapse" aria-expanded="true" aria-controls="rodoCollapse">
-                            Więcej o ochronie danych<i class="icofont-thin-down"></i>
+                            {% trans 'Więcej o ochronie danych' %}<i class="icofont-thin-down"></i>
                           </a>
                         </span>
                   
                       <div id="rodoCollapse" class="collapse" aria-labelledby="headingOne" data-parent="#rodo-terms">
                         <div class="card-body">
-                          @todo Anim pariatur cliche reprehenderit, vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.  
-                          <a href="@todo" target="_blank">czytaj więcej </a>
+                          {% trans "@todo Anim pariatur cliche reprehenderit, vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS." %}  
+                          <a href="/rodo" target="_blank">{% trans 'czytaj więcej ' %}</a>
                         </div>
                       </div>
                     
                     </span>
             </label>
         </div>
-        {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-        {% endif %}
-       
-        {{ form.errors }} {# @todo to be removed #}
       </form>
     
