--- a/users/templates/account/verification_sent.html
+++ b/users/templates/account/verification_sent.html
@@ -2,25 +2,15 @@
 
 {% load i18n %}
 
-{% block content %}
-        <!-- ======= Verification subpage ======= -->
-        <section id="login" class="login first-section last-section">
-          <div class="container">
-            <div  class="section-title">
-                <h1><i class="icofont-send-mail"></i></h1>
-                <h2 class="mb-3 text-center">Ostani krok i możemy zaczynać. Zwerifikuj swoje konto.</h2>
-                <p></p>
-            </div>
-            <div class="row d-flex justify-content-center">
-             <div class="col-md-8 order-md-1">
-                <p> W celu zakończenia procesu rejestracji należy zwerifikować adres email. Wysłaliśmy Ci wiadomość z linkiem werifikacyjnym, w celu dokonania werifikacji <mark>należy kliknąć w niego.</mark></p>
-                <p>
-                    Proszę skontaktuj się z nami jeśli nie otrzymałeś żadnej wiadomości w przeciągu kliku minut od momentu wysłania formularza rejestracyjnego.                
-                </p>
-              </div>
-  
-            </div>
-          </div>
-        </section>
-    
+{% block account_title %}Ostani krok i możemy zaczynać. Zwerifikuj swoje konto. {% endblock %}
+
+
+{% block account_content %}
+<div class="col-md-6 order-md-1">
+
+  <p> W celu zakończenia procesu rejestracji należy zwerifikować adres email. Wysłaliśmy Ci wiadomość z linkiem werifikacyjnym, w celu dokonania werifikacji <mark>należy kliknąć w niego.</mark></p>
+  <p>
+      Proszę skontaktuj się z nami jeśli nie otrzymałeś żadnej wiadomości w przeciągu kliku minut od momentu wysłania formularza rejestracyjnego.                
+  </p>
+</div>
 {% endblock %}
